--- a/jarvis agent/jarvis-agent.html
+++ b/jarvis agent/jarvis-agent.html
@@ -293,7 +293,7 @@
     const DIFY_CONFIG = {
         // 在 Dify 工作流页面 → API 调用示例（curl），复制那个 POST 的完整 URL 过来
         endpoint: "https://api.dify.ai/v1/workflows/run",
-        // 在 Dify 设置里生成的 API Key（注意：正式上线不要写在前端，这里方便你先跑通）
+        // 在 Dify 设置里生成的 API Key，这里设置的是我的apikey，给大家试用直接能运行（测试通过后请改成自己的apikey！）
         apiKey: "app-dBf8dFUK36VYkdp4HUn51VK3",
         // 工作流入口变量名（比如你在 workflow 入口定义了一个变量叫 query）
         inputKey: "query",
